--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-6">
-                    <h1 class="fw-bold text-dark bg-light ps-3">Welcome to <br> Appsxone IT <br> solutions</h1>
+                    <h1 class="fw-bold text-dark bg-light ps-3">Welcome to <br> Appsxone IT <br> solution's</h1>
                     <p>Software & Tech Dewelopment For the Future</p>
                     <button class=" fw-bold btn btn-warning">Get started</button>
 
